--- a/css/style.css
+++ b/css/style.css
@@ -63,11 +63,8 @@ img {
   padding: 0;
   margin: 0;
 }
-#song_album_wrapper {
-  display: flex;
-  gap: 20px;
-}
-
-#songs, #albums {
-  flex: 1;
+@media (max-width: 600px) {
+  body {
+    font-size: 16px;
+  }
 }
